kube/book-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book
  labels:
    app: book
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book
  template:
    metadata:
      labels:
        app: book
    spec:
      containers:
        - name: book
          image: josemagne/book:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: "0.2"
              memory: "400Mi"
      imagePullSecrets:
        - name: regcred
