kube/flashcard-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flashcard
  labels:
    app: flashcard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flashcard
  template:
    metadata:
      labels:
        app: flashcard
    spec:
      containers:
        - name: flashcard
          image: josemagne/flashcard:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8083
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
      imagePullSecrets:
        - name: regcred
