kube/frontend-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librimem-frontend
  labels:
    app: librimem-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: librimem-frontend
  template:
    metadata:
      labels:
        app: librimem-frontend
    spec:
      containers:
        - name: librimem-frontend
          image: josemagne/librimem-frontend:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          resources:
            limits:
              cpu: "200m"
              memory: "200Mi"
      imagePullSecrets:
        - name: regcred
