kube/user-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: josemagne/user:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8082
          resources:
            limits:
              cpu: "0.2"
              memory: "400Mi"
      imagePullSecrets:
        - name: regcred
