kube/book-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: book
spec:
  type: NodePort
  selector:
    app: book
  ports:
    - name: http
      port: 8080
      targetPort: 8080
