kube/chapter-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: chapter
spec:
  type: NodePort
  selector:
    app: chapter
  ports:
    - name: http
      port: 8081
      targetPort: 8081
