kube/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: librimem-frontend
spec:
  type: NodePort
  selector:
    app: librimem-frontend
  ports:
    - name: http
      port: 8079
      targetPort: 80
