kube/readable-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: readable
spec:
  type: NodePort
  selector:
    app: readable
  ports:
    - name: http
      port: 8088
      targertPort: 8088
