kube/user-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: user
spec:
  type: NodePort
  selector:
    app: user
  ports:
    - name: http
      port: 8082
      targetPort: 8082
